{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 652,
  "lineage": "31b98814-09ab-b620-cb56-e65fcd49b40d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06af6d6b1913533f2",
            "domain": "vpc",
            "id": "eipalloc-06af6d6b1913533f2",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-42-160-15.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.160.15",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0716a17b7c3424056",
            "domain": "vpc",
            "id": "eipalloc-0716a17b7c3424056",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-132-169-217.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.169.217",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-018adb5cbf7720066",
            "arn": "arn:aws:ec2:eu-west-2:487354732760:instance/i-07236f49eadd07d43",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-07236f49eadd07d43",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c5712d7c2647ebe",
            "private_dns": "ip-10-0-0-5.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0483c8dca8216985d",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b045c5fab023f5d7",
            "tags": {
              "Environment": "development",
              "Name": "Paula_test",
              "Patch Group": "development"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "Paula_test",
              "Patch Group": "development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0915993e8dc0ca91c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.dev-resources-iam-profile",
            "aws_iam_role.dev-resources-iam-role",
            "aws_security_group.sg",
            "aws_subnet.private_subnet_1",
            "aws_vpc.main",
            "data.aws_ami.amazon-windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:internet-gateway/igw-094a87bf2b5a12bc2",
            "id": "igw-094a87bf2b5a12bc2",
            "owner_id": "487354732760",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "public_subnet_1_main_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068b7fbca311b7aaf",
            "original_route_table_id": "rtb-0eb5c53cb28779b31",
            "route_table_id": "rtb-015d790edebb38ea9",
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06af6d6b1913533f2",
            "connectivity_type": "public",
            "id": "nat-009eb15d78de81edb",
            "network_interface_id": "eni-09b1858acd25e8010",
            "private_ip": "10.0.2.98",
            "public_ip": "13.42.160.15",
            "subnet_id": "subnet-04c66ac6e8db381ab",
            "tags": {
              "Name": "NatGatewayAZ1"
            },
            "tags_all": {
              "Name": "NatGatewayAZ1"
            }
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0716a17b7c3424056",
            "connectivity_type": "public",
            "id": "nat-02ee3909df872943b",
            "network_interface_id": "eni-0b1fecd2ebbe618ea",
            "private_ip": "10.0.3.159",
            "public_ip": "18.132.169.217",
            "subnet_id": "subnet-01500f5574373659c",
            "tags": {
              "Name": "NatGatewayAZ2"
            },
            "tags_all": {
              "Name": "NatGatewayAZ2"
            }
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:network-acl/acl-00227d721c5630b19",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00227d721c5630b19",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32768,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 443
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3389,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 3389
              }
            ],
            "owner_id": "487354732760",
            "subnet_ids": [
              "subnet-04c66ac6e8db381ab"
            ],
            "tags": {
              "Name": "My VPC ACL"
            },
            "tags_all": {
              "Name": "My VPC ACL"
            },
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:route-table/rtb-0f0c671314b26049e",
            "id": "rtb-0f0c671314b26049e",
            "owner_id": "487354732760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-009eb15d78de81edb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet AZ1",
              "Network": "Private01"
            },
            "tags_all": {
              "Name": "Private Subnet AZ1",
              "Network": "Private01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:route-table/rtb-0f77dcbfb17465bc5",
            "id": "rtb-0f77dcbfb17465bc5",
            "owner_id": "487354732760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02ee3909df872943b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet AZ2",
              "Network": "Private02"
            },
            "tags_all": {
              "Name": "Private Subnet AZ2",
              "Network": "Private02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:route-table/rtb-015d790edebb38ea9",
            "id": "rtb-015d790edebb38ea9",
            "owner_id": "487354732760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094a87bf2b5a12bc2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnets",
              "Network": "Public"
            },
            "tags_all": {
              "Name": "Public Subnets",
              "Network": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c695f1a544fa1d4",
            "route_table_id": "rtb-0f0c671314b26049e",
            "subnet_id": "subnet-0b045c5fab023f5d7"
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private_route_table_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af3e8ef15eca123f",
            "route_table_id": "rtb-0f77dcbfb17465bc5",
            "subnet_id": "subnet-0cd8d52462efe428f"
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.private_route_table_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05beb10d2a9826b76",
            "route_table_id": "rtb-015d790edebb38ea9",
            "subnet_id": "subnet-04c66ac6e8db381ab"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bfe96fd924782fe",
            "route_table_id": "rtb-015d790edebb38ea9",
            "subnet_id": "subnet-01500f5574373659c"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:security-group/sg-08b5f82d6b35f7d1d",
            "description": "Allows access to RDS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b5f82d6b35f7d1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "487354732760",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "Paula_test"
            },
            "tags_all": {
              "environment": "Paula_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:security-group/sg-0915993e8dc0ca91c",
            "description": "Allow ssh http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0915993e8dc0ca91c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_ssh_Access",
            "name_prefix": "",
            "owner_id": "487354732760",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_https"
            },
            "tags_all": {
              "Name": "allow_ssh_https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:subnet/subnet-0b045c5fab023f5d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b045c5fab023f5d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "487354732760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet01"
            },
            "tags_all": {
              "Name": "PrivateSubnet01"
            },
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:subnet/subnet-0cd8d52462efe428f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd8d52462efe428f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "487354732760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet02"
            },
            "tags_all": {
              "Name": "PrivateSubnet02"
            },
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:subnet/subnet-04c66ac6e8db381ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c66ac6e8db381ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "487354732760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet01"
            },
            "tags_all": {
              "Name": "PublicSubnet01"
            },
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:subnet/subnet-01500f5574373659c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01500f5574373659c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "487354732760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet02"
            },
            "tags_all": {
              "Name": "PublicSubnet02"
            },
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:vpc/vpc-0301456f1af9163a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6afaa14f863bb7a",
            "default_route_table_id": "rtb-0eb5c53cb28779b31",
            "default_security_group_id": "sg-0181c289eeaeb8f2f",
            "dhcp_options_id": "dopt-0be5720549386bbe9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0301456f1af9163a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb5c53cb28779b31",
            "owner_id": "487354732760",
            "tags": {
              "Name": "vpc-development"
            },
            "tags_all": {
              "Name": "vpc-development"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:vpc-endpoint/vpce-0d0c5e2a7aae3f344",
            "dns_entry": [
              {
                "dns_name": "vpce-0d0c5e2a7aae3f344-vs6zebwu.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0d0c5e2a7aae3f344-vs6zebwu-eu-west-2a.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0d0c5e2a7aae3f344-vs6zebwu-eu-west-2b.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z00553041P60MLN7A85HF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0d0c5e2a7aae3f344",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-044c99801e3e2695d",
              "eni-075adb6dfdadf8f08"
            ],
            "owner_id": "487354732760",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08b5f82d6b35f7d1d",
              "sg-0915993e8dc0ca91c"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-0b045c5fab023f5d7",
              "subnet-0cd8d52462efe428f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "dependencies": [
            "aws_security_group.rds",
            "aws_security_group.sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:vpc-endpoint/vpce-0867fe81d9e68a0d2",
            "dns_entry": [
              {
                "dns_name": "vpce-0867fe81d9e68a0d2-wz98rqgs.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0867fe81d9e68a0d2-wz98rqgs-eu-west-2a.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0867fe81d9e68a0d2-wz98rqgs-eu-west-2b.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2messages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z005626834JMOWB3C3VUR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0867fe81d9e68a0d2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-002a42b6e0453695a",
              "eni-0791eac92ecade6b0"
            ],
            "owner_id": "487354732760",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08b5f82d6b35f7d1d",
              "sg-0915993e8dc0ca91c"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-0b045c5fab023f5d7",
              "subnet-0cd8d52462efe428f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "dependencies": [
            "aws_security_group.rds",
            "aws_security_group.sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:vpc-endpoint/vpce-063b58cf167e9dba0",
            "dns_entry": [
              {
                "dns_name": "vpce-063b58cf167e9dba0-npulla9z.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-063b58cf167e9dba0-npulla9z-eu-west-2b.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-063b58cf167e9dba0-npulla9z-eu-west-2a.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssm.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z07672693K7TCDB6G6VQB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-063b58cf167e9dba0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-025f5a5a3de806ed8",
              "eni-041410c2c3266e4b2"
            ],
            "owner_id": "487354732760",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08b5f82d6b35f7d1d",
              "sg-0915993e8dc0ca91c"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0b045c5fab023f5d7",
              "subnet-0cd8d52462efe428f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "dependencies": [
            "aws_security_group.rds",
            "aws_security_group.sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:487354732760:vpc-endpoint/vpce-0e25fc65d899de2ec",
            "dns_entry": [
              {
                "dns_name": "vpce-0e25fc65d899de2ec-tcad1gpx.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0e25fc65d899de2ec-tcad1gpx-eu-west-2a.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0e25fc65d899de2ec-tcad1gpx-eu-west-2b.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssmmessages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z00562712S4OCS7DYYJHG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0e25fc65d899de2ec",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07077cfa008e5e5e1",
              "eni-0e882cbd829bd3cbb"
            ],
            "owner_id": "487354732760",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08b5f82d6b35f7d1d",
              "sg-0915993e8dc0ca91c"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-0b045c5fab023f5d7",
              "subnet-0cd8d52462efe428f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0301456f1af9163a6"
          },
          "dependencies": [
            "aws_security_group.rds",
            "aws_security_group.sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}